Sun Jul 03 11:01:21 GMT 2011  Olly Betts <olly@survex.com>

	* java-swig/: Actually rename to java/.

Sun Jul 03 10:36:13 GMT 2011  Olly Betts <olly@survex.com>

	* java/: Actually remove the old hand-coded JNI Java bindings.

Wed Jun 29 22:38:29 GMT 2011  Olly Betts <olly@survex.com>

	* php/Makefile.am,php/docs/examples/,php/smoketest.php: Change
	  'include "php5/xapian.php"' to 'include "xapian.php"' in
	  smoketest.php and the examples, and set include_path=php5 in
	  TESTS_ENVIRONMENT so smoketest.php finds the uninstalled
	  xapian.php.

Wed Jun 29 01:04:51 GMT 2011  Olly Betts <olly@survex.com>

	* csharp/SmokeTest.cs: Add test coverage for QueryParser.ParseQuery()
	  with flags argument.

Wed Jun 29 00:00:25 GMT 2011  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Rename java-swig subdirectory to java.

Tue Jun 28 23:52:13 GMT 2011  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Add simple test for
	  Database::positionlist_begin().

Tue Jun 28 12:14:17 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Jun 27 15:22:22 GMT 2011  Olly Betts <olly@survex.com>

	* python/Makefile.am,python/python.i,python/util.i: If
	  MAINTAINER_NO_DOCS is true, then just create an empty doccomments.i
	  rather then carefully arranging not to include it.

Mon Jun 27 15:04:59 GMT 2011  Olly Betts <olly@survex.com>

	* python/extra.i: Clarify that extra.i is for extra *Python* code.

Mon Jun 27 14:39:26 GMT 2011  Olly Betts <olly@survex.com>

	* TODO: Wrapping Xapian::Weight isn't possible. (ticket#401)

Mon Jun 27 14:34:24 GMT 2011  Olly Betts <olly@survex.com>

	* perl/perl.i,perl/util.i.in: Move the SWIG typemaps into perl.i,
	  leaving just the %perlcode in util.i.in.

Mon Jun 27 14:23:54 GMT 2011  Olly Betts <olly@survex.com>

	* xapian.i: Remove %module line which is no longer used.

Mon Jun 27 14:10:19 GMT 2011  Olly Betts <olly@survex.com>

	* perl/util.i.in: WritableDatabase::delete_document() was broken by